# grafana-sync

./: .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  crates.js  default.nix  flake.nix  help.html  index.html  package.nix  result  search-index.js  settings.html  src-files.js
.github/workflows/: ci.yml  release.yml
grafana_sync/: all.html  fn.main.html  fn.run.html  index.html  sidebar-items.js
grafana_sync/api/: index.html
grafana_sync/config/: index.html  struct.Config.html
grafana_sync/dashboard_state/: fn.dashboards_equal.html  fn.index_by_uid.html  fn.merge_dashboards.html  index.html  sidebar-items.js  struct.DashboardState.html  type.Dashboards.html  type.SetName.html
grafana_sync/encrypted_cred/: index.html  struct.EncryptedCredential.html
grafana_sync/error/: enum.GSError.html  index.html  sidebar-items.js
grafana_sync/instance/: index.html  sidebar-items.js  struct.GrafanaInstance.html
grafana_sync/service/: fn.ensure_folders_on_instance.html  fn.fetch_full_dashboards.html  fn.replicate_dashboards_on_instance.html  index.html  struct.SyncService.html  type.FolderMap.html
graphsync/: all.html  fn.main.html  fn.run.html  index.html
graphsync/api/: index.html  sidebar-items.js
graphsync/config/: index.html  struct.Config.html
graphsync/dashboard_state/: fn.dashboards_equal.html  fn.index_by_uid.html  fn.merge_dashboards.html  index.html  struct.DashboardState.html  type.Dashboards.html  type.SetName.html
graphsync/error/: enum.GSError.html  (+1 more)
src/: config.rs  dashboard_state.rs  encrypted_cred.rs  error.rs  instance.rs  main.rs  service.rs
(+84 files in other folders)
