[package]
name = "graphsync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.132"
serde_yaml = "0.9.34-deprecated"
tokio = { version = "1.41.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = "0.4.38"
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "2.0.11"
reqwest = { version = "0.12.8", features = ["json"] }
tracing = "0.1.40"
aes-gcm = "0.10.3"
serde = { version = "1.0.213", features = ["derive"] }
uuid = { version = "1.11.0", features = ["v4", "fast-rng"] }
