[package]
name = "grafana-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.138"
serde_yaml = "0.9.34-deprecated"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
chrono = { version = "0.4.39", features = ["serde"] }
log = "0.4.22"
env_logger = "0.11.6"
thiserror = "2.0.11"
reqwest = { version = "0.12.12", features = ["json"] }
tracing = "0.1.41"
aes-gcm = "0.10.3"
serde = { version = "1.0.217", features = ["derive"] }
uuid = { version = "1.13.1", features = ["v4", "fast-rng"] }
futures = "0.3.31"
